--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="container">
             <header>
                 <ul>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="./pages/work.html">Work</a></li>
                     <li><a href="./pages/blog.html">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
