--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,7 +17,7 @@
                     <a href="#">Blog</a>
                 </li>
                 <li>
-                    <a href="../index.html">Work</a>
+                    <a href="./work.html">Work</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
